feat: 安全加固、OAuth修复、注册防护与上传优化
安全加固
- 新增 SecurityEventService、AlertService 记录并告警安全事件
- 新增 IpBanFilter 实现 IP 封禁过滤
- 新增 AdminSecurityController 提供安全事件查询与 IP 解封接口
- 新增 SecurityAccessDeniedHandler / SecurityAuthenticationEntryPoint 统一鉴权异常响应
- TokenService 支持 session 管理与批量吊销
- JwtUtil 重构，支持 refresh token 与 step-up 验证
- 新增 UrlSecurityUtil 防止开放重定向攻击
- AuditLogAspect 增强审计日志覆盖范围
- RateLimitAspect / RateLimitService 新增域名频率限制与全局速率兜底

OAuth 修复
- OAuthController 路由从 /api/oauth 统一修正为 /api/auth，与 GitHub/Gitee 回调地址对齐
- .env 生产环境 redirect_uri 更新为 https://oujincong.xyz/api/auth/github(gitee)/callback
- 新增 OAUTH_FRONTEND_REDIRECT_BASE 环境变量
- 部署脚本 OAuth redirect_uri 改为读取 .env 变量，不再硬编码 IP

注册防护
- AuthController 新增 /send-register-code 接口，发送前校验一次性邮箱黑名单、域名频率、全局速率
- 注册接口强制校验邮箱验证码（10分钟有效，一次性消费）
- RegisterRequest 新增 emailCode 字段
- PasswordUtil 新增 isValidUsername 校验（4-20位，字母/数字/下划线）
- EmailService 新增注册验证码发送方法，支持自定义发件人姓名（哈基聪）

前端
- Register.vue 新增邮箱验证码输入行，60秒倒计时，账号格式实时提示，maxlength=20
- Login.vue / OAuthCallback.vue 适配新 token 与 step-up 流程
- stores/user.js 增强用户状态管理
- api/index.js 统一请求拦截与错误处理
- Album.vue 文件列表固定宽度，文件名超长省略显示

配置与部署
- application-dev/prod.yml 新增 multipart 上传限制 100MB、发件人姓名配置
- Nginx 配置新增 client_max_body_size 100m（域名版、IP版、secure模板三处）
- 新增 security_event.sql 安全事件表结构